--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Asap&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -23,6 +23,33 @@ header {
   text-align: center;
   border-bottom: 1px solid #3B9E9E;
 }
+
+.logo-name {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.name {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.icons {
+  display: flex;
+  align-items: center;
+}
+
+.settings-icon, .profile-icon {
+  width: 30px;
+  height: 30px;
+  margin: 0 10px;
+}
 .container {
 	height: 100vh;
 	width: 100%;
@@ -46,6 +73,7 @@ header {
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
+  z-index: 20;
 	/* background-color: aqua; */
 }
 .popup-overlay {
@@ -65,7 +93,6 @@ header {
 	line-height: 1rem;
 	display: flex;
 	justify-content: center;
-	align-items: center;
 	transform: translateX(100%);
 }
 .close-btn {
@@ -273,6 +300,9 @@ footer {
   .footer-links {
       margin-bottom: 10px;
       text-align: center;
+  }
+  .main-popup{
+    width: 100%;
   }
 }
 
