--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
-
+body{
+font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif;
+background:#B2DFDB;
+}
 * {
   margin: 0;
   padding: 0;
@@ -18,10 +22,10 @@ header {
   left: 0;
   width: 100%;
   z-index: 1000;
-  background:lightpink;
+  background:#B2DFDB;
   padding: 20px;
   text-align: center;
-  border-bottom: 1px solid #3B9E9E;
+  border-bottom: 1px solid #009587;
 }
 .header {
   display: flex;
@@ -29,7 +33,9 @@ header {
   align-items: center;
   padding: 10px;
 }
-
+h1, h2, h3{
+  color: #009587;
+}
 .logo-name {
   display: flex;
   align-items: center;
@@ -193,7 +199,7 @@ div.scroll-container img {
 	height: 100vh;
 	width: 50%;
 	z-index: 1;
-	background: lightpink;
+	background: #B2DFDB;
 	line-height: 1rem;
 	display: flex;
 	justify-content: center;
@@ -203,16 +209,29 @@ div.scroll-container img {
 	border: .6px solid white;
 	padding: 10px;
 	position: absolute;
-	top: 1rem;
 	right: 1rem;
 	font-size: 2rem;
 	cursor: pointer;
 	transition: .5s ease all;
   width: 40px;
   height: 40px;
+  margin: 20px;
 }
 .close-btn:hover {
 	background: white;
+}
+.container.reveal {
+  text-align: center;
+  padding: 80px 0;
+}
+#home {
+  display: flex;
+  flex-direction: row; /* Display children in a column layout */
+  align-items: center; /* Center content horizontally */
+}
+.btn {
+  text-align: center;
+  margin-top: 20px;
 }
 .popup-content{
   width: 100%;
@@ -252,13 +271,10 @@ header nav a {
 }
 header nav a:hover,
 header nav a.active {
-  background: #3B9E9E;
+  background: #009587;
   color: #42455a;
   transition: 0.5s ease-out;
   letter-spacing: 2px;
-}
-body {
-  background:#4fbdbd;
 }
 section {
   min-height: 100vh;
@@ -287,27 +303,28 @@ section .container {
   margin: 100px;
 }
 section .flex-container {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center; /* Vertically align items */
+  justify-content: space-between; /* Distribute items along the main axis */
 }
 
 section .text-container {
-  flex: 1;
-  padding: 20px;
-  min-width: 300px;
+  flex: 1; /* Allow text container to flex and take available space */
+  padding-right: 20px; /* Add some space between text and GIF */
 }
 
 section .text-box {
-  background-color: white;
+  color: black;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
 section .gif-container {
-  flex: 1;
-  padding: 20px;
-  text-align: center;
+  flex: 1; /* Allow GIF container to flex and take available space */
+  display: flex;
+  justify-content: center; /* Center GIF horizontally */
+  align-items: center; /* Center GIF vertically */
 }
 
 section .gif-container img {
@@ -326,7 +343,7 @@ section h2 {
 section .text-container .text-box {
   margin: 20px;
   padding: 20px;
-  background: #3B9E9E;
+  background: #B2DFDB;
 }
 section .text-container .text-box h3 {
   font-size: 30px;
@@ -379,7 +396,11 @@ footer {
     section .flex-container {
         flex-direction: column;
     }
-
+#home{
+  display: flex;
+  flex-direction: column; /* Display children in a column layout */
+  align-items: center;
+}
     section .text-container {
         min-width: auto;
     }
@@ -404,6 +425,30 @@ footer {
     }
     .header {
       padding: 10px;
+    }
+    .container.reveal {
+      padding: 50px 0;
+    }
+    
+    .btn {
+      margin-top: 10px;
+    }
+    
+    .open-btn {
+      font-size: 0.9rem; /* Adjust font size for smaller screens */
+    padding: 0.7rem 1.5rem;
+    }
+    .wrapper {
+      display: block; /* Display in a new line on mobile */
+    text-align: center; /* Center the button */
+    margin-top: 15px;
+    }
+    .container h1 {
+      font-size: 24px; /* Adjust font size for mobile */
+    }
+    .link {
+      font-size: 1.5rem;
+      margin-top: 15px;
     }
     
     .logo-name {
@@ -527,7 +572,6 @@ footer {
   margin:0px;
  text-align: center;
 font-size:20px;
-font-family: 'Strait', sans-serif;
 
 }
 
@@ -594,6 +638,7 @@ text-align: center;
 top:12px; 
 font-size:20px;
 
+
 }
 
 
@@ -619,6 +664,7 @@ transition:width .2s linear;
 -webkit-transform:translateZ(0) scale(1,1);
 box-shadow: 1px 0 15px rgba(0, 0, 0, 0.07);
   opacity:1;
+
   
 }
 
@@ -648,14 +694,14 @@ text-decoration:none;
 -webkit-transform:translateZ(0) scale(1,1);
 -webkit-transition:all .14s linear;
 transition:all .14s linear;
-font-family: 'Strait', sans-serif;
 border-top:1px solid #f2f2f2;
 
 text-shadow: 1px 1px 1px  #fff;  
 }
 
-
-
+.white-link {
+  color: transparent;
+}
 .main-menu .nav-icon {
   
 position:relative;
@@ -674,7 +720,6 @@ position:relative;
 display:table-cell;
 vertical-align:middle;
 width:190px;
-font-family: 'Titillium Web', sans-serif;
 }
 
 .main-menu .share {
@@ -798,3 +843,58 @@ width: 100%;
 height: 100%;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
+:root {
+  --white: #eee;
+  --black: #141414;
+  --color: #3333ff;
+  scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center; 
+  width: 30vh;
+  text-align: center;
+}
+
+.link {
+  flex-direction: column; 
+  display: block;
+  font-size: 2rem;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+  align-items: center; /* Vertically center content */
+  position: relative;
+  padding: 10px 20px;
+}
+
+.link span,
+.link i {
+  position: relative;
+}
+
+.link i {
+  margin-left: 0.5em;
+}
+
+.link .color {
+  width: 2em;
+  height: 2em;
+  border-radius: 2em;
+  background-color: var(--color);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -0.65em;
+}
